traces/bug_213.txt
examples++-mpi/real_SuperLU_DIST_FreeFem.cpp:284: error: DEAD_STORE
  The value written to &infobcast (type int) is never used.
Showing all 1 steps of the trace


examples++-mpi/real_SuperLU_DIST_FreeFem.cpp:284:6: Write of unused value
282.   	    dallocateA_dist(n, nnz, &a, &asub, &xa);
283.   	    
284.   	    int infobcast=MPI_Bcast( a, nnz, MPI_DOUBLE, 0, grid.comm );
            ^
285.   	    MPI_Bcast( asub, nnz, mpi_int_t,  0, grid.comm );
286.   	    MPI_Bcast( xa,   n+1, mpi_int_t,  0, grid.comm );
